# UP_11_Sborschikov

./: README.md  VanessaCorpApp.sln  up_11_techology_of_dev_and_secure_db.sln
backend/: app.py  program.cs  pyproject.toml
backend/api/repository/: crud.py
backend/api/routes/: routes.py
backend/api/schema/: auth.py  employee_create.py  login_respone.py  online_order_create.py
backend/config/: params.py
backend/data_upload/replace_procedures/: add_new_client.sql  get_clients_order.sql
backend/entities/: database.py  entities.py
backend/queries/: authoriz.sql
backend/rest_controller/: rest_controller.csproj  rest_controller.http
backend/rest_controller/Properties/: launchSettings.json
data_upload/: .gitignore  backup.sql  script.sql
data_upload/replace_procedures/: get_all_pharmacy_products.sql
docker/: Dockerfile.backend  Dockerfile.frontend
documentation/: description_of_the_subject_area.md
frontend/: README.md
frontend/VanessaApp/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  VanessaApp.csproj  VanessaApp.sln  app.manifest
frontend/VanessaApp/Entities/: 20250329130122_AddAutoIncrementPrimaryKeyInPharmacyProductEntity.Designer.cs  20250329130122_AddAutoIncrementPrimaryKeyInPharmacyProductEntity.cs  VanessaDbContext.cs  VanessaDbContextModelSnapshot.cs  animal_type.cs  auth.cs  (+14 more)
frontend/VanessaCorpApp/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  VanessaCorpApp.csproj  app.manifest
frontend/up_app/: README.md  pubspec.yaml
frontend/vanessa_copr_app/: README.md  pubspec.yaml
(+82 files in other folders)
