[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Igorik <egorsborsikov250575@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.39"
psycopg2-binary = "^2.9.10"
sqlacodegen = "^3.0.0"
fastapi = "^0.115.11"
reportlab = "^4.3.1"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
